# scintill-ai

./: .env.shared  .gitignore  LICENSE  README.md  pyproject.toml  todo.md
data/in/omniweb/: vars_query_params.md
jupyters/: 0_preprocess.ipynb  var.py
scintill_ai/: __init__.py  io.py  preprocess.py  utils.py
scripts/: download.sh  download_omniweb_data.sh  download_omniweb_data_vars.md
